Successfully running Dreambooth on Openbayes

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -14,11 +14,11 @@
    "id": "ba9fae5b-6950-407b-bf57-be286109579b",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T17:35:57.071430Z",
-     "iopub.status.busy": "2022-12-12T17:35:57.070604Z",
-     "iopub.status.idle": "2022-12-12T17:35:58.303344Z",
-     "shell.execute_reply": "2022-12-12T17:35:58.302648Z",
-     "shell.execute_reply.started": "2022-12-12T17:35:57.071294Z"
+     "iopub.execute_input": "2022-12-12T18:16:37.435262Z",
+     "iopub.status.busy": "2022-12-12T18:16:37.435095Z",
+     "iopub.status.idle": "2022-12-12T18:16:38.586447Z",
+     "shell.execute_reply": "2022-12-12T18:16:38.585578Z",
+     "shell.execute_reply.started": "2022-12-12T18:16:37.435224Z"
     },
     "tags": []
    },
@@ -45,11 +45,11 @@
    "id": "f43a26af-ea59-43a1-b3a4-d7b24c366367",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T17:35:58.305695Z",
-     "iopub.status.busy": "2022-12-12T17:35:58.305361Z",
-     "iopub.status.idle": "2022-12-12T17:36:08.435697Z",
-     "shell.execute_reply": "2022-12-12T17:36:08.435043Z",
-     "shell.execute_reply.started": "2022-12-12T17:35:58.305660Z"
+     "iopub.execute_input": "2022-12-12T18:16:38.588773Z",
+     "iopub.status.busy": "2022-12-12T18:16:38.588489Z",
+     "iopub.status.idle": "2022-12-12T18:16:49.939332Z",
+     "shell.execute_reply": "2022-12-12T18:16:49.938121Z",
+     "shell.execute_reply.started": "2022-12-12T18:16:38.588751Z"
     },
     "tags": []
    },
@@ -63,42 +63,47 @@
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0mLooking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
       "Requirement already satisfied: transformers in /usr/local/lib/python3.8/site-packages (4.25.1)\n",
-      "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.8/site-packages (from transformers) (4.64.0)\n",
-      "Requirement already satisfied: huggingface-hub<1.0,>=0.10.0 in /usr/local/lib/python3.8/site-packages (from transformers) (0.11.1)\n",
-      "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.8/site-packages (from transformers) (6.0)\n",
       "Requirement already satisfied: regex!=2019.12.17 in /usr/local/lib/python3.8/site-packages (from transformers) (2022.10.31)\n",
-      "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.8/site-packages (from transformers) (1.23.4)\n",
       "Requirement already satisfied: tokenizers!=0.11.3,<0.14,>=0.11.1 in /usr/local/lib/python3.8/site-packages (from transformers) (0.13.2)\n",
+      "Requirement already satisfied: numpy>=1.17 in /usr/local/lib/python3.8/site-packages (from transformers) (1.23.4)\n",
+      "Requirement already satisfied: pyyaml>=5.1 in /usr/local/lib/python3.8/site-packages (from transformers) (6.0)\n",
       "Requirement already satisfied: packaging>=20.0 in /usr/local/lib/python3.8/site-packages (from transformers) (21.3)\n",
       "Requirement already satisfied: requests in /usr/local/lib/python3.8/site-packages (from transformers) (2.28.1)\n",
+      "Requirement already satisfied: huggingface-hub<1.0,>=0.10.0 in /usr/local/lib/python3.8/site-packages (from transformers) (0.11.1)\n",
       "Requirement already satisfied: filelock in /usr/local/lib/python3.8/site-packages (from transformers) (3.8.2)\n",
+      "Requirement already satisfied: tqdm>=4.27 in /usr/local/lib/python3.8/site-packages (from transformers) (4.64.0)\n",
       "Requirement already satisfied: typing-extensions>=3.7.4.3 in /usr/local/lib/python3.8/site-packages (from huggingface-hub<1.0,>=0.10.0->transformers) (4.4.0)\n",
       "Requirement already satisfied: pyparsing!=3.0.5,>=2.0.2 in /usr/local/lib/python3.8/site-packages (from packaging>=20.0->transformers) (3.0.9)\n",
       "Requirement already satisfied: certifi>=2017.4.17 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (2022.6.15)\n",
       "Requirement already satisfied: charset-normalizer<3,>=2 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (2.0.4)\n",
-      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (1.26.11)\n",
       "Requirement already satisfied: idna<4,>=2.5 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (3.3)\n",
+      "Requirement already satisfied: urllib3<1.27,>=1.21.1 in /usr/local/lib/python3.8/site-packages (from requests->transformers) (1.26.11)\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0mLooking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
       "Requirement already satisfied: bitsandbytes in /usr/local/lib/python3.8/site-packages (0.35.4)\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "\u001b[0mLooking in indexes: https://pypi.tuna.tsinghua.edu.cn/simple\n",
       "Requirement already satisfied: jax in /usr/local/lib/python3.8/site-packages (0.3.25)\n",
-      "Requirement already satisfied: scipy>=1.5 in /usr/local/lib/python3.8/site-packages (from jax) (1.9.0)\n",
       "Requirement already satisfied: opt-einsum in /usr/local/lib/python3.8/site-packages (from jax) (3.3.0)\n",
-      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/site-packages (from jax) (4.4.0)\n",
       "Requirement already satisfied: numpy>=1.20 in /usr/local/lib/python3.8/site-packages (from jax) (1.23.4)\n",
+      "Requirement already satisfied: scipy>=1.5 in /usr/local/lib/python3.8/site-packages (from jax) (1.9.0)\n",
+      "Requirement already satisfied: typing-extensions in /usr/local/lib/python3.8/site-packages (from jax) (4.4.0)\n",
       "\u001b[33mWARNING: Running pip as the 'root' user can result in broken permissions and conflicting behaviour with the system package manager. It is recommended to use a virtual environment instead: https://pip.pypa.io/warnings/venv\u001b[0m\u001b[33m\n",
       "Hit:1 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic InRelease\n",
       "Hit:2 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-backports InRelease\n",
-      "Hit:3 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-updates InRelease\n",
-      "Hit:4 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-security InRelease\n",
+      "Hit:3 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-updates InRelease      \n",
+      "Hit:4 http://mirrors.tuna.tsinghua.edu.cn/ubuntu bionic-security InRelease     \n",
       "Hit:5 https://deb.nodesource.com/node_14.x bionic InRelease                    \n",
-      "Reading package lists... Done                                   \n",
+      "Reading package lists... Done\n",
       "Reading package lists... Done\n",
       "Building dependency tree       \n",
       "Reading state information... Done\n",
       "p7zip-full is already the newest version (16.02+dfsg-6).\n",
+      "0 upgraded, 0 newly installed, 0 to remove and 94 not upgraded.\n",
+      "Reading package lists... Done\n",
+      "Building dependency tree       \n",
+      "Reading state information... Done\n",
+      "iputils-ping is already the newest version (3:20161105-1ubuntu3).\n",
       "0 upgraded, 0 newly installed, 0 to remove and 94 not upgraded.\n"
      ]
     }
@@ -109,7 +114,8 @@
     "!pip install bitsandbytes\n",
     "!pip install jax\n",
     "!apt-get update\n",
-    "!apt-get install -y p7zip-full\n"
+    "!apt-get install -y p7zip-full\n",
+    "!apt-get install -y iputils-ping\n"
    ]
   },
   {
@@ -118,11 +124,11 @@
    "id": "f0d07e0b-3ecd-4873-a4a6-7466418da56c",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T17:36:08.437214Z",
-     "iopub.status.busy": "2022-12-12T17:36:08.437026Z",
-     "iopub.status.idle": "2022-12-12T17:36:10.421618Z",
-     "shell.execute_reply": "2022-12-12T17:36:10.420901Z",
-     "shell.execute_reply.started": "2022-12-12T17:36:08.437193Z"
+     "iopub.execute_input": "2022-12-12T18:16:49.941211Z",
+     "iopub.status.busy": "2022-12-12T18:16:49.940866Z",
+     "iopub.status.idle": "2022-12-12T18:16:51.954774Z",
+     "shell.execute_reply": "2022-12-12T18:16:51.954088Z",
+     "shell.execute_reply.started": "2022-12-12T18:16:49.941174Z"
     }
    },
    "outputs": [
@@ -153,15 +159,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "875e96c2-0706-4e04-813c-bf4a02a40017",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T17:47:50.204288Z",
-     "iopub.status.busy": "2022-12-12T17:47:50.203863Z",
-     "iopub.status.idle": "2022-12-12T17:47:50.802066Z",
-     "shell.execute_reply": "2022-12-12T17:47:50.800871Z",
-     "shell.execute_reply.started": "2022-12-12T17:47:50.204242Z"
+     "iopub.execute_input": "2022-12-12T18:16:51.955844Z",
+     "iopub.status.busy": "2022-12-12T18:16:51.955674Z",
+     "iopub.status.idle": "2022-12-12T18:16:52.575150Z",
+     "shell.execute_reply": "2022-12-12T18:16:52.574614Z",
+     "shell.execute_reply.started": "2022-12-12T18:16:51.955826Z"
     },
     "tags": []
    },
@@ -214,15 +220,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 5,
    "id": "73aec890-1745-4f77-b3bc-af98d1726554",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T17:47:51.805251Z",
-     "iopub.status.busy": "2022-12-12T17:47:51.804637Z",
-     "iopub.status.idle": "2022-12-12T17:47:51.834198Z",
-     "shell.execute_reply": "2022-12-12T17:47:51.833130Z",
-     "shell.execute_reply.started": "2022-12-12T17:47:51.805190Z"
+     "iopub.execute_input": "2022-12-12T18:16:52.575925Z",
+     "iopub.status.busy": "2022-12-12T18:16:52.575781Z",
+     "iopub.status.idle": "2022-12-12T18:16:52.586094Z",
+     "shell.execute_reply": "2022-12-12T18:16:52.585635Z",
+     "shell.execute_reply.started": "2022-12-12T18:16:52.575910Z"
     },
     "tags": []
    },
@@ -325,44 +331,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 12,
    "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T17:48:12.421823Z",
-     "iopub.status.busy": "2022-12-12T17:48:12.421420Z",
-     "iopub.status.idle": "2022-12-12T17:48:12.451666Z",
-     "shell.execute_reply": "2022-12-12T17:48:12.450677Z",
-     "shell.execute_reply.started": "2022-12-12T17:48:12.421778Z"
+     "iopub.execute_input": "2022-12-12T19:05:08.933406Z",
+     "iopub.status.busy": "2022-12-12T19:05:08.933147Z",
+     "iopub.status.idle": "2022-12-12T19:05:08.943459Z",
+     "shell.execute_reply": "2022-12-12T19:05:08.942908Z",
+     "shell.execute_reply.started": "2022-12-12T19:05:08.933385Z"
     },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "IMAGES_FOLDER_OPTIONAL=\"\" #@param{type: \"string\"}\n",
-      "\n",
-      "IMAGES_FOLDER_OPTIONAL = \"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\" #@param{type: \"string\"}\n",
-      "\n",
-      "\n",
-      "IMAGES_FOLDER_OPTIONAL=\"\" #@param{type: \"string\"}\n",
-      "\n",
-      "IMAGES_FOLDER_OPTIONAL = \"/openbayes/home/content/gdrive/MyDrive/Fast-Dreambooth/Sessions/FuXingHao768/instance_images\" #@param{type: \"string\"}\n",
-      "\n",
-      "\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
-    "\n",
-    "def keepAnnotationBehide(line):\n",
-    "  identifier=\"#@\"\n",
-    "  if identifier in line:\n",
-    "    annotation=line.split(identifier)[1]\n",
-    "    return identifier+annotation\n",
     "\n",
     "def modify_file_name(file_path):\n",
     "  # 获取文件名和文件扩展名\n",
@@ -383,13 +366,12 @@
     "        for var, val in var_map.items():\n",
     "          if isinstance(val, str):\n",
     "            val = f'\"{val}\"'\n",
-    "          if cell['source'][i].startswith(f'{var} = ') or cell['source'][i].startswith(f'{var}='):\n",
-    "            annotation=keepAnnotationBehide(cell['source'][i])\n",
-    "            # if \"IMAGES_FOLDER_OPTIONA\" in cell['source'][i]:\n",
-    "            #     print(cell['source'][i])\n",
-    "            cell['source'][i] = f'{var} = {val} {annotation}\\n' \n",
-    "            # if \"IMAGES_FOLDER_OPTIONA\" in cell['source'][i]:\n",
-    "            #     print(cell['source'][i])\n",
+    "          # 有 #@ 说明这一行是提供给用户自行填充的参数，所以才进行参数替换\n",
+    "          identifier=\"#@\"\n",
+    "          thisLine=cell['source'][i]\n",
+    "          if identifier in thisLine and (thisLine.startswith(f'{var} =') or thisLine.startswith(f'{var}=')):\n",
+    "            annotation=thisLine.split(identifier)[1]\n",
+    "            cell['source'][i] = f'{var}={val} {identifier+annotation}' \n",
     "\n",
     "  # 保存修改后的notebook\n",
     "  updatedDataNotebookPath=modify_file_name(ipynb_file)\n",
@@ -427,11 +409,11 @@
    "id": "cdea68b7-983a-4341-8fed-a2ac19e8fffb",
    "metadata": {
     "execution": {
-     "iopub.execute_input": "2022-12-12T17:36:11.059399Z",
-     "iopub.status.busy": "2022-12-12T17:36:11.059171Z",
-     "iopub.status.idle": "2022-12-12T17:36:11.067036Z",
-     "shell.execute_reply": "2022-12-12T17:36:11.066365Z",
-     "shell.execute_reply.started": "2022-12-12T17:36:11.059379Z"
+     "iopub.execute_input": "2022-12-12T18:16:52.603579Z",
+     "iopub.status.busy": "2022-12-12T18:16:52.603209Z",
+     "iopub.status.idle": "2022-12-12T18:16:52.609091Z",
+     "shell.execute_reply": "2022-12-12T18:16:52.608679Z",
+     "shell.execute_reply.started": "2022-12-12T18:16:52.603563Z"
     },
     "tags": []
    },
