--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -264,7 +264,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "\u001b[1;33mPing程序运行耗时\u001b[0m: \u001b[1;32m6毫秒\u001b[0m\n"
+      "\u001b[1;33mPing程序运行耗时\u001b[0m: \u001b[1;32m4毫秒\u001b[0m\n",
+      "Ping通该IP与端口：192.168.1.174:12798，正在使用【内蒙】代理\n"
      ]
     },
     {
@@ -284,15 +285,13 @@
    ],
    "source": [
     "import wget\n",
-    "import urllib.request\n",
     "import os,sys\n",
     "sys.path.append('../') # 因为func与ipynb位于同一个目录下，所以要往上一层路径索引\n",
-    "from func.env import setProxyCLI\n",
+    "from func.env import setProxyCLI,proxyWget\n",
     "cb=setProxyCLI()\n",
     "proxy=cb['proxy']\n",
     "region=cb['region']\n",
     "proxyURL=cb['proxyURL']\n",
-    "\n",
     "\n",
     "# 在当前运行的ipynb文件所在的目录下创建临时文件夹temp\n",
     "def create_temp_folder(temp_folder):\n",
@@ -313,15 +312,11 @@
     "fastDreamBoothPath = os.path.join(temp_folder, file_name)\n",
     "if os.path.exists(fastDreamBoothPath):\n",
     "    os.remove(fastDreamBoothPath)\n",
-    "\n",
-    "proxy_handler = urllib.request.ProxyHandler({'http': proxyURL})\n",
-    "opener = urllib.request.build_opener(proxy_handler)\n",
-    "urllib.request.install_opener(opener)\n",
-    "\n",
-    "urllib.request.urlretrieve(\n",
-    "    \"https://raw.githubusercontent.com/TheLastBen/fast-stable-diffusion/main/fast-DreamBooth.ipynb\",\n",
-    "    os.path.join(temp_folder, file_name)\n",
-    ")\n",
+    "    \n",
+    "fastDreamBoothPath = proxyWget(\n",
+    "    url=\"https://raw.githubusercontent.com/TheLastBen/fast-stable-diffusion/main/fast-DreamBooth.ipynb\", \n",
+    "    out=os.path.join(temp_folder, file_name), \n",
+    "    proxyURL=proxyURL)\n",
     "\n",
     "print(fastDreamBoothPath)"
    ]
@@ -331,12 +326,12 @@
    "id": "25fbefc9-7c37-48bb-97e1-4fef802fc9af",
    "metadata": {},
    "source": [
-    "# 清理Notebook中的输出，对Colab版中的路径进行替换，以适应openbayes的路径"
+    "# 清理Notebook中的输出，对Colab版中的路径进行替换，以适应openbayes或autodl的路径"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 65,
+   "execution_count": 22,
    "id": "73aec890-1745-4f77-b3bc-af98d1726554",
    "metadata": {
     "tags": []
@@ -355,6 +350,7 @@
    "source": [
     "import json\n",
     "import os\n",
+    "import re\n",
     "\n",
     "def modify_file_name(file_path):\n",
     "  # 获取文件名和文件扩展名\n",
@@ -368,23 +364,22 @@
     "    with open(notebook, \"r\") as f:\n",
     "        nb = json.load(f)\n",
     "\n",
-    "    # 隐藏代码\n",
-    "    for cell in nb[\"cells\"]:\n",
+    "    # 替换旧的根路径为新的根路径\n",
+    "  \n",
+    "    for cell in nb[\"cells\"]:            \n",
     "        if cell[\"cell_type\"] == \"code\":\n",
+    "            # Initialize the flag variable\n",
+    "            import_added = False  \n",
+    "            # 隐藏代码\n",
     "            cell[\"metadata\"] = {\"collapsed\": True}\n",
-    "\n",
-    "    # 清空notebook中所有输出\n",
-    "    for cell in nb['cells']:\n",
-    "        if cell['cell_type'] == 'code':\n",
     "            # 清除代码单元格的执行次数\n",
     "            cell['execution_count'] = None\n",
     "            # 清除代码单元格的输出\n",
-    "            cell['outputs'] = []\n",
-    "\n",
-    "    # 替换旧的根路径为新的根路径\n",
-    "    for cell in nb[\"cells\"]:\n",
-    "        if cell[\"cell_type\"] == \"code\":\n",
+    "            cell['outputs'] = []            \n",
     "            for i, line in enumerate(cell[\"source\"]):\n",
+    "                # 替换@param{type: 'xxx'}中的单引号为双引号\n",
+    "                if \"@param\" in line:\n",
+    "                    cell[\"source\"][i] = line.replace(\"'\", '\"')           \n",
     "                # 添加一个条件判断，只有当该行不是网址路径时才进行替换\n",
     "                if not line.startswith((\"http\", \"https\")):\n",
     "                    cell[\"source\"][i] = line.replace(old_root, new_root)\n",
@@ -394,6 +389,45 @@
     "                # 把使用google drive盘挂载的代码行标注为注释\n",
     "                if \"drive.mount\" in line:\n",
     "                    cell[\"source\"][i] = \"# \" + line\n",
+    "                 # 如果找到 \"!wget\" 字符串，就将其替换为 \"!proxy && wget\"\n",
+    "                if '!wget' in line:\n",
+    "                    cell[\"source\"][i] = line.replace('!wget', '!proxy && wget')\n",
+    "                # 定义 proxyWget 函数（请确保已经定义了 proxyWget 函数）\n",
+    "\n",
+    "                import textwrap\n",
+    "\n",
+    "                if \"wget.download\" in line:\n",
+    "                    # 使用正则表达式查找所有使用了 proxyWget 函数的行\n",
+    "                    match = re.search(r\"wget\\.download\\(.+\\)\", line)\n",
+    "                    if match:\n",
+    "                        # 获取 wget.download 函数调用的参数\n",
+    "                        params = match.group().strip(\"wget.download()\")\n",
+    "                        # 计算新的一行代码的缩进\n",
+    "                        indent = \" \" * line.count(\" \")\n",
+    "                        # 将 wget.download 函数调用替换为带有新参数的函数调用\n",
+    "                        new_line = f\"{indent}proxyWget({params}, os.getcwd(), '{proxyURL}')\\n\"\n",
+    "                        cell[\"source\"][i] = new_line\n",
+    "\n",
+    "                        \n",
+    "            for i, line in enumerate(cell[\"source\"]):\n",
+    "                # Check if the line contains \"wget\" and add the import statement if necessary\n",
+    "                if \"wget\" in line and not import_added:\n",
+    "                    import_statements = [\n",
+    "                        \"import sys\",\n",
+    "                        \"from IPython.utils import capture\",\n",
+    "                        \"sys.path.append('../../')\", \n",
+    "                        \"from func.env import setProxyCLI,proxyWget\", \n",
+    "                        \"cb=setProxyCLI()\", \n",
+    "                        \"proxy=cb['proxy']\",\n",
+    "                        \"region=cb['region']\", \n",
+    "                        \"proxyURL=cb['proxyURL']\"\n",
+    "                        ,\"\"\n",
+    "                    ]\n",
+    "                    import_statements_with_newline = [s + \"\\n\" for s in import_statements]\n",
+    "                    # print(import_statements_with_newline)\n",
+    "                    cell[\"source\"] = import_statements_with_newline + cell[\"source\"]\n",
+    "                    # Set the flag to indicate that the import has been added\n",
+    "                    import_added = True\n",
     "                \n",
     "                # # 原始字符串\n",
     "                # original = \"!cp -r /openbayes/home/content/usr/local/lib/python3.8/dist-packages /usr/local/lib/python3.8/\"\n",
@@ -401,12 +435,6 @@
     "                #     # 替换python路径\n",
     "                #     cell[\"source\"][i] = re.sub(r'/usr/local/lib/python3.8/', '/usr/local/lib/python/', original)\n",
     "                    \n",
-    "    # 替换@param{type: 'xxx'}中的单引号为双引号\n",
-    "    for cell in nb[\"cells\"]:\n",
-    "        if cell[\"cell_type\"] == \"code\":\n",
-    "            for i, line in enumerate(cell[\"source\"]):\n",
-    "                if \"@param\" in line:\n",
-    "                    cell[\"source\"][i] = line.replace(\"'\", '\"')\n",
     "                    \n",
     "    # 保存修改后的notebook\n",
     "    newNotebook=modify_file_name(notebook)\n",
@@ -471,7 +499,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 66,
+   "execution_count": 23,
    "id": "1f98c0df-b75b-4bf3-ad0f-7181fd4f87f1",
    "metadata": {
     "tags": []
