fix bug: !proxy ➜ !$proxy

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -104,12 +104,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 36,
    "id": "73aec890-1745-4f77-b3bc-af98d1726554",
    "metadata": {
+    "execution": {
+     "iopub.execute_input": "2022-12-18T08:22:00.999649Z",
+     "iopub.status.busy": "2022-12-18T08:22:00.998950Z",
+     "iopub.status.idle": "2022-12-18T08:22:01.113486Z",
+     "shell.execute_reply": "2022-12-18T08:22:01.111361Z",
+     "shell.execute_reply.started": "2022-12-18T08:22:00.999592Z"
+    },
     "tags": []
    },
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "当前运行环境为openbayes\n",
+      "内容路径： /openbayes/home/content\n",
+      "/output/OneClick-stable-diffusion/dreambooth/temp/fast-DreamBooth-modified.ipynb\n"
+     ]
+    }
+   ],
    "source": [
     "import json\n",
     "import os\n",
@@ -153,7 +170,7 @@
     "                    cell[\"source\"][i] = \"# \" + line\n",
     "                # 如果找到 \"!wget\" 字符串，就将其替换为 \"!proxy && wget\"\n",
     "                if \"!wget\" in line:\n",
-    "                    cell[\"source\"][i] = line.replace(\"!wget\", \"!proxy && wget\")\n",
+    "                    cell[\"source\"][i] = line.replace(\"!wget\", \"!$proxy && wget\")\n",
     "                # 定义 proxyWget 函数（请确保已经定义了 proxyWget 函数）\n",
     "\n",
     "                import textwrap\n",
