create symbolic link to the mounted model

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -96,6 +96,47 @@
   },
   {
    "cell_type": "markdown",
+   "id": "77c4244f-3fbc-4f24-b9fa-8eb291dc1535",
+   "metadata": {},
+   "source": [
+    "# 在Content目录下创建一个指向挂载模型的软连接"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "input_dir_path='/input0' # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
+    "model_dir_path='/output/content' # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
+    "model_name='stable-diffusion-v2-768' # 模型名称\n",
+    "\n",
+    "import os\n",
+    "\n",
+    "# 创建软链接\n",
+    "try:\n",
+    "    os.symlink(input_dir_path, f\"{model_dir_path}/{model_name}\")\n",
+    "except FileExistsError:\n",
+    "    # 如果软链接已经存在，则删除软链接\n",
+    "    if os.path.exists(f\"{model_dir_path}/{model_name}\"):\n",
+    "        os.remove(f\"{model_dir_path}/{model_name}\")\n",
+    "    # 再次尝试创建软链接\n",
+    "    os.symlink(input_dir_path, f\"{model_dir_path}/{model_name}\")\n",
+    "\n",
+    "# 验证软链接是否成功创建\n",
+    "if os.path.islink(f\"{model_dir_path}/{model_name}\"):\n",
+    "    print(f\"{model_dir_path}/{model_name} 是一个符号链接。\")\n",
+    "    print(f\"它指向: {os.readlink(f'{model_dir_path}/{model_name}')}\")\n",
+    "else:\n",
+    "    print(f\"{model_dir_path}/{model_name} 不是一个符号链接。\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "25fbefc9-7c37-48bb-97e1-4fef802fc9af",
    "metadata": {},
    "source": [
@@ -104,29 +145,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 36,
+   "execution_count": null,
    "id": "73aec890-1745-4f77-b3bc-af98d1726554",
    "metadata": {
-    "execution": {
-     "iopub.execute_input": "2022-12-18T08:22:00.999649Z",
-     "iopub.status.busy": "2022-12-18T08:22:00.998950Z",
-     "iopub.status.idle": "2022-12-18T08:22:01.113486Z",
-     "shell.execute_reply": "2022-12-18T08:22:01.111361Z",
-     "shell.execute_reply.started": "2022-12-18T08:22:00.999592Z"
-    },
     "tags": []
    },
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "当前运行环境为openbayes\n",
-      "内容路径： /openbayes/home/content\n",
-      "/output/OneClick-stable-diffusion/dreambooth/temp/fast-DreamBooth-modified.ipynb\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import json\n",
     "import os\n",
