--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -32,6 +32,27 @@
   },
   {
    "cell_type": "markdown",
+   "id": "fedcb082-730a-4daf-a701-678028dc6f51",
+   "metadata": {},
+   "source": [
+    "# 配置accelerate"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "411362b2-a1e3-4c92-b774-e97365554cb2",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "!chmod +x ./accelerate.sh\n",
+    "!./accelerate.sh"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "df462c9a-eb68-4fe9-85ff-37ef243442a6",
    "metadata": {
     "tags": []
@@ -99,7 +120,7 @@
    "id": "77c4244f-3fbc-4f24-b9fa-8eb291dc1535",
    "metadata": {},
    "source": [
-    "# 在Content目录下创建一个指向挂载模型的软连接"
+    "# 创建符号链接"
    ]
   },
   {
@@ -111,28 +132,39 @@
    },
    "outputs": [],
    "source": [
-    "input_dir_path='/input0' # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
-    "model_dir_path='/output/content' # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
-    "model_name='stable-diffusion-v2-768' # 模型名称\n",
-    "\n",
     "import os\n",
     "\n",
-    "# 创建软链接\n",
-    "try:\n",
-    "    os.symlink(input_dir_path, f\"{model_dir_path}/{model_name}\")\n",
-    "except FileExistsError:\n",
-    "    # 如果软链接已经存在，则删除软链接\n",
-    "    if os.path.exists(f\"{model_dir_path}/{model_name}\"):\n",
-    "        os.remove(f\"{model_dir_path}/{model_name}\")\n",
-    "    # 再次尝试创建软链接\n",
-    "    os.symlink(input_dir_path, f\"{model_dir_path}/{model_name}\")\n",
+    "def create_symlink(source_path, symlink_path, symlink_name):\n",
+    "    # 创建软链接\n",
+    "    try:\n",
+    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
+    "    except FileExistsError:\n",
+    "        # 如果软链接已经存在，则删除软链接\n",
+    "        if os.path.exists(f\"{symlink_path}/{symlink_name}\"):\n",
+    "            os.remove(f\"{symlink_path}/{symlink_name}\")\n",
+    "        # 再次尝试创建软链接\n",
+    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
     "\n",
-    "# 验证软链接是否成功创建\n",
-    "if os.path.islink(f\"{model_dir_path}/{model_name}\"):\n",
-    "    print(f\"{model_dir_path}/{model_name} 是一个符号链接。\")\n",
-    "    print(f\"它指向: {os.readlink(f'{model_dir_path}/{model_name}')}\")\n",
-    "else:\n",
-    "    print(f\"{model_dir_path}/{model_name} 不是一个符号链接。\")"
+    "    # 验证软链接是否成功创建\n",
+    "    if os.path.islink(f\"{symlink_path}/{symlink_name}\"):\n",
+    "        print(f\"{symlink_path}/{symlink_name} 是一个符号链接。\")\n",
+    "        print(f\"它指向: {os.readlink(f'{symlink_path}/{symlink_name}')}\")\n",
+    "    else:\n",
+    "        print(f\"{symlink_path}/{symlink_name} 不是一个符号链接。\")\n",
+    "        \n",
+    "# 在output目录下创建一个tf_dir指向dreambooth打印的logs软连接  \n",
+    "create_symlink(\n",
+    "    source_path=\"/output/content/models/FuXingHao768/logs/\", \n",
+    "    symlink_path='/output', \n",
+    "    symlink_name='tf_dir'\n",
+    ")\n",
+    "\n",
+    "# 在Content目录下创建一个指向挂载模型的软连接\n",
+    "create_symlink(\n",
+    "    source_path='/input0', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
+    "    symlink_path='/output/content', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
+    "    symlink_name='stable-diffusion-v2-768' # 模型名称\n",
+    ")"
    ]
   },
   {
