Adjust the execution order of cells

--- a/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
+++ b/dreambooth/fixDreamBooth-Notebook-for-Openbayes.ipynb
@@ -27,7 +27,9 @@
     "!apt-get update\n",
     "!apt-get install -y p7zip-full\n",
     "!apt-get install -y iputils-ping\n",
-    "!apt-get install -y git-lfs"
+    "!apt-get install -y git-lfs\n",
+    "\n",
+    "# !pip install -r requirements.txt"
    ]
   },
   {
@@ -113,58 +115,6 @@
     "#     proxyURL=proxyURL)\n",
     "\n",
     "# print(fastDreamBoothPath)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "id": "77c4244f-3fbc-4f24-b9fa-8eb291dc1535",
-   "metadata": {},
-   "source": [
-    "# 创建符号链接"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
-   "metadata": {
-    "tags": []
-   },
-   "outputs": [],
-   "source": [
-    "import os\n",
-    "\n",
-    "def create_symlink(source_path, symlink_path, symlink_name):\n",
-    "    # 创建软链接\n",
-    "    try:\n",
-    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
-    "    except FileExistsError:\n",
-    "        # 如果软链接已经存在，则删除软链接\n",
-    "        if os.path.exists(f\"{symlink_path}/{symlink_name}\"):\n",
-    "            os.remove(f\"{symlink_path}/{symlink_name}\")\n",
-    "        # 再次尝试创建软链接\n",
-    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
-    "\n",
-    "    # 验证软链接是否成功创建\n",
-    "    if os.path.islink(f\"{symlink_path}/{symlink_name}\"):\n",
-    "        print(f\"{symlink_path}/{symlink_name} 是一个符号链接。\")\n",
-    "        print(f\"它指向: {os.readlink(f'{symlink_path}/{symlink_name}')}\")\n",
-    "    else:\n",
-    "        print(f\"{symlink_path}/{symlink_name} 不是一个符号链接。\")\n",
-    "        \n",
-    "# 在output目录下创建一个tf_dir指向dreambooth打印的logs软连接  \n",
-    "create_symlink(\n",
-    "    source_path=\"/output/content/models/FuXingHao768/logs/\", \n",
-    "    symlink_path='/output', \n",
-    "    symlink_name='tf_dir'\n",
-    ")\n",
-    "\n",
-    "# 在Content目录下创建一个指向挂载模型的软连接\n",
-    "create_symlink(\n",
-    "    source_path='/input0', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
-    "    symlink_path='/output/content', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
-    "    symlink_name='stable-diffusion-v2-768' # 模型名称\n",
-    ")"
    ]
   },
   {
@@ -329,6 +279,58 @@
     "    notebook=fastDreamBoothPath, old_root=\"/content\", new_root=content_folder\n",
     ")\n",
     "print(newNotebookPath)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "77c4244f-3fbc-4f24-b9fa-8eb291dc1535",
+   "metadata": {},
+   "source": [
+    "# 创建符号链接"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bec6d7ce-56a8-48ab-873b-16a64c39f0f7",
+   "metadata": {
+    "tags": []
+   },
+   "outputs": [],
+   "source": [
+    "import os\n",
+    "\n",
+    "def create_symlink(source_path, symlink_path, symlink_name):\n",
+    "    # 创建软链接\n",
+    "    try:\n",
+    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
+    "    except FileExistsError:\n",
+    "        # 如果软链接已经存在，则删除软链接\n",
+    "        if os.path.exists(f\"{symlink_path}/{symlink_name}\"):\n",
+    "            os.remove(f\"{symlink_path}/{symlink_name}\")\n",
+    "        # 再次尝试创建软链接\n",
+    "        os.symlink(source_path, f\"{symlink_path}/{symlink_name}\")\n",
+    "\n",
+    "    # 验证软链接是否成功创建\n",
+    "    if os.path.islink(f\"{symlink_path}/{symlink_name}\"):\n",
+    "        print(f\"{symlink_path}/{symlink_name} 是一个符号链接。\")\n",
+    "        print(f\"它指向: {os.readlink(f'{symlink_path}/{symlink_name}')}\")\n",
+    "    else:\n",
+    "        print(f\"{symlink_path}/{symlink_name} 不是一个符号链接。\")\n",
+    "        \n",
+    "# # 在output目录下创建一个tf_dir指向dreambooth打印的logs软连接  \n",
+    "# create_symlink(\n",
+    "#     source_path=\"/output/content/models/FuXingHao768/logs/\", \n",
+    "#     symlink_path='/output', \n",
+    "#     symlink_name='tf_dir'\n",
+    "# )\n",
+    "\n",
+    "# 在Content目录下创建一个指向挂载模型的软连接\n",
+    "create_symlink(\n",
+    "    source_path='/input0', # openbayes 特有的目录，是外部数据集挂载到当前镜像的目录，编号从0~4\n",
+    "    symlink_path='/output/content', # fast-dreambooth.ipynb的 model download cell一般下载模型的路径\n",
+    "    symlink_name='stable-diffusion-v2-768' # 模型名称\n",
+    ")"
    ]
   },
   {
@@ -545,22 +547,6 @@
     "\n",
     "# refsColor()"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "edcf174d-d79e-41b0-b74f-7e623ffe65fb",
-   "metadata": {},
-   "outputs": [],
-   "source": []
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "2ddfa51d-fe08-43a4-a9b3-afec408a51e6",
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
